--- a/module_card_girl/src/main/res/layout/swipe_fling_item.xml
+++ b/module_card_girl/src/main/res/layout/swipe_fling_item.xml
@@ -91,7 +91,7 @@
 
         </RelativeLayout>
 
-        <com.hc.module.cardgirl.view.CardImageView
+        <com.guiying.module.cardgirl.ui.impl.view.CardImageView
             android:id="@+id/item_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -103,7 +103,7 @@
             app:riv_corner_radius_top_right="4dp"
             app:riv_tile_mode="clamp" />
 
-        <com.hc.module.cardgirl.view.SwipeIndicatorView
+        <com.guiying.module.cardgirl.ui.impl.view.SwipeIndicatorView
             android:id="@+id/item_swipe_unlike_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -115,7 +115,7 @@
             android:visibility="invisible"
             tools:visibility="visible" />
 
-        <com.hc.module.cardgirl.view.SwipeIndicatorView
+        <com.guiying.module.cardgirl.ui.impl.view.SwipeIndicatorView
             android:id="@+id/item_swipe_like_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
