--- a/module_main/src/main/res/layout/activity_main.xml
+++ b/module_main/src/main/res/layout/activity_main.xml
@@ -29,24 +29,28 @@
         android:layout_height="wrap_content"
         android:text="Fragment" />
 
+    <Button
+        android:id="@+id/card_girls_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="朋友点我" />
+
     <ImageView
         android:id="@+id/img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/tmp"
-        />
+        android:src="@drawable/tmp" />
+
     <ImageView
         android:id="@+id/img2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/tmp"
-        />
+        android:src="@drawable/tmp" />
 
     <ImageView
         android:id="@+id/img3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/tmp"
-        />
+        android:src="@drawable/tmp" />
 
 </LinearLayout>
